--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       border-spacing: 0;
       min-width: 700px;
       width: 100%;
-      font-size: 0.93em;
+      font-size: 0.89em;
       background: #fff;
       margin-bottom: 10px;
     }
@@ -141,23 +141,22 @@
       background: #fff;
       padding: 8px 10px;
       text-align: center;
-      font-size: 0.92em;
+      font-size: 0.89em;
       transition: background 0.2s, color 0.2s;
+      vertical-align: top;
     }
     /* Badges para condiciones */
     .badge {
       display: inline-flex;
       align-items: center;
-      gap: 6px;
-      padding: 4px 14px 4px 10px;
-      border-radius: 16px;
-      font-size: 0.93em;
-      font-weight: bold;
-      text-align: center;
-      min-width: 90px;
-      margin: 2px 0;
-      border: 1.5px solid transparent;
       justify-content: center;
+      padding: 3px 8px;
+      border-radius: 16px;
+      font-size: 1.1em;
+      min-width: 32px;
+      min-height: 32px;
+      border: 1.5px solid transparent;
+      margin: 2px 0;
     }
     .badge-permitido {
       background: #e6fbe9;
@@ -175,9 +174,10 @@
       border-color: #d6003a;
     }
     .badge svg {
-      width: 1.1em;
-      height: 1.1em;
+      width: 1.3em;
+      height: 1.3em;
       vertical-align: middle;
+      display: block;
     }
     .noresult {
       color: #FF007A;
@@ -213,7 +213,7 @@
       body { margin: 8px; }
       .card { padding: 12px 4vw 18px 4vw; gap: 18px; }
       .condiciones-box { padding: 12px 8px; }
-      .restric-table { min-width: 480px; font-size: 0.89em; }
+      .restric-table { min-width: 480px; font-size: 0.85em; }
       .restric-table th, .restric-table td { padding: 7px 6px; }
       input { width: 98vw; max-width: 99vw; }
     }
@@ -227,24 +227,60 @@
   <script>
     let datos = [];
     let datosCargados = false;
-    // Lista de países/medios de pago a mostrar en tabla
+    // Países y medios de pago por país
     const paises = ["CO","BR","AR","PE","CL","MX","PA"];
-    const medios = ["OXXO","IGT","Davivienda","Banorte","Amex","Pago efectivo","Niubiz","Izipay","Amex__1","IGT__1"];
+    const mediosPorPais = {
+      "CO": ["PSE", "Efecty", "Codensa", "Davivienda", "Ding", "Bancolombia", "Nequi", "Botón", "Movii", "Scotiabank", "ACH", "Matrix", "TC", "Banco Occidente", "BBVA"],
+      "MX": ["OXXO", "IGT", "Banorte", "Amex", "Santader", "Bancomer", "Diestel", "SPEI", "Pago efectivo", "Amex PR"],
+      "PE": ["Pago efectivo", "Amex PR", "Procesos MC", "Visanet", "Niubiz", "Izipay", "Amex"],
+      "AR": ["Cobro Express", "Pagofacil", "Prisma", "Fiserv", "Rapipago"],
+      "CL": ["Multicaja", "Transbank", "Santader"],
+      "PA": ["IGT", "Metrobank", "FISERV"],
+      "BR": ["REDE", "CIELO"]
+    };
 
-    // Función para mostrar badge según valor
+    // Función para mostrar solo el ícono en el badge según valor
     function getBadge(valor) {
       if (!valor) return '';
       const v = valor.toString().toLowerCase();
       if (v.includes('permitido')) return `<span class="badge badge-permitido">
         <svg viewBox="0 0 20 20" fill="currentColor"><circle cx="10" cy="10" r="10" fill="#1a7f37"/><path d="M6 10.5l2.5 2.5 5-5" stroke="#fff" stroke-width="2" fill="none" stroke-linecap="round"/></svg>
-        Permitido</span>`;
+      </span>`;
       if (v.includes('restringido')) return `<span class="badge badge-restringido">
         <svg viewBox="0 0 20 20" fill="currentColor"><circle cx="10" cy="10" r="10" fill="#b59a00"/><rect x="5" y="9" width="10" height="2" rx="1" fill="#fff"/></svg>
-        Restringido</span>`;
+      </span>`;
       if (v.includes('prohibido')) return `<span class="badge badge-prohibido">
         <svg viewBox="0 0 20 20" fill="currentColor"><circle cx="10" cy="10" r="10" fill="#d6003a"/><path d="M7 7l6 6M13 7l-6 6" stroke="#fff" stroke-width="2" stroke-linecap="round"/></svg>
-        Prohibido</span>`;
+      </span>`;
       return valor;
+    }
+
+    // Genera la tabla de medios de pago agrupada por país
+    function generarTablaMedios(row) {
+      let maxMedios = Math.max(...Object.values(mediosPorPais).map(arr => arr.length));
+      let html = `<table class="restric-table"><tr>`;
+      // Encabezados de país
+      paises.forEach(pais => {
+        html += `<th>${pais}</th>`;
+      });
+      html += `</tr>`;
+      // Filas de medios de pago
+      for (let i = 0; i < maxMedios; i++) {
+        html += `<tr>`;
+        paises.forEach(pais => {
+          const medios = mediosPorPais[pais] || [];
+          const medio = medios[i];
+          if (medio) {
+            const val = row[medio] || "";
+            html += `<td>${getBadge(val)}</td>`;
+          } else {
+            html += `<td></td>`;
+          }
+        });
+        html += `</tr>`;
+      }
+      html += `</table>`;
+      return html;
     }
 
     // Cargar el JSON al iniciar la página
@@ -313,18 +349,8 @@
             </div>
             <div class="section-space"></div>
             <div class="table-responsive">
-              <span class="label">Medios de pago:</span>
-              <table class="restric-table">
-                <tr>
-                  ${medios.map(m=>`<th>${m}</th>`).join('')}
-                </tr>
-                <tr>
-                  ${medios.map(m=>{
-                    const val = row[m]||"";
-                    return `<td>${getBadge(val)}</td>`;
-                  }).join('')}
-                </tr>
-              </table>
+              <span class="label">Medios de pago por país:</span>
+              ${generarTablaMedios(row)}
             </div>
           </div>
           <div class="condiciones-box">
