--- a/index.html
+++ b/index.html
@@ -232,43 +232,65 @@
     const paises = ["CO","BR","AR","PE","CL","MX","PA"];
     const mediosPorPais = {
       "CO": [
-        {label: "OXXO", columna: "OXXO"},
-        {label: "IGT", columna: "IGT"},
-        {label: "Davivienda", columna: "Davivienda"},
-        {label: "Codensa", columna: "Codensa"},
-        // ...otros de CO
+        {label: "PSE", columna: "PSE"},  
+        {label: "Efecty", columna: "Efecty"},  
+        {label: "OXXO", columna: "OXXO"},  
+        {label: "Codensa", columna: "Codensa"},  
+        {label: "IGT", columna: "IGT"},  
+        {label: "Davivienda", columna: "Davivienda"},  
+        {label: "Ding", columna: "Ding"},  
+        {label: "Bancolombia", columna: "Bancolombia"},  
+        {label: "Nequi", columna: "Nequi"},  
+        {label: "Botón", columna: "Botón"},  
+        {label: "Movii", columna: "Movii"},  
+        {label: "Scotiabank", columna: "Scotiabank"},  
+        {label: "ACH", columna: "ACH"},  
+        {label: "Matrix", columna: "Matrix"},  
+        {label: "TC", columna: "TC"},  
+        {label: "Banco Occidente", columna: "Banco Occidente"},  
+        {label: "BBVA", columna: "BBVA"}
       ],
       "CL": [
         {label: "IGT", columna: "IGT__1"},
         {label: "Multicaja", columna: "Multicaja"},
         {label: "Transbank", columna: "Transbank"},
-        {label: "Santader", columna: "Santader__1"},
+        {label: "Santader", columna: "Santader__1"}
         // ...otros de CL
       ],
       "MX": [
-        {label: "Banorte", columna: "Banorte"},
-        {label: "Amex", columna: "Amex"},
+        {label: "Banorte", columna: "Banorte"},  
+        {label: "Amex", columna: "Amex"},  
+        {label: "Santader", columna: "Santader"},  
+        {label: "Bancomer", columna: "Bancomer"},  
+        {label: "Diestel", columna: "Diestel"},  
+        {label: "SPEI", columna: "SPEI"}
         // ...otros de MX
       ],
       "PE": [
-        {label: "Pago efectivo", columna: "Pago efectivo"},
-        {label: "Niubiz", columna: "Niubiz"},
-        {label: "Izipay", columna: "Izipay"},
-        // ...otros de PE
+        {label: "Pago efectivo", columna: "Pago efectivo"},  
+        {label: "Amex PR", columna: "Amex PR"},  
+        {label: "Procesos MC", columna: "Procesos MC"},  
+        {label: "Visanet", columna: "Visanet"},  
+        {label: "Niubiz", columna: "Niubiz"},  
+        {label: "Izipay", columna: "Izipay"}
       ],
       "AR": [
-        {label: "Cobro Express", columna: "Cobro Express"},
-        {label: "Pagofacil", columna: "Pagofacil"},
-        // ...otros de AR
+        {label: "Amex", columna: "Amex__1"},  
+        {label: "Cobro Express", columna: "Cobro Express"},  
+        {label: "Pagofacil", columna: "Pagofacil"},  
+        {label: "Prisma", columna: "Prisma"},  
+        {label: "Fiserv", columna: "Fiserv"},  
+        {label: "Rapipago", columna: "Rapipago"}
+        
       ],
       "PA": [
-        {label: "Metrobank", columna: "Metrobank"},
+        {label: "Metrobank", columna: "Metrobank"}
         // ...otros de PA
       ],
       "BR": [
-        {label: "REDE", columna: "REDE"},
-        {label: "CIELO", columna: "CIELO"},
-        // ...otros de BR
+        {label: "FISERV", columna: "FISERV"},  
+        {label: "REDE", columna: "REDE"},  
+        {label: "CIELO", columna: "CIELO"}
       ]
     };
 
