--- a/index.html
+++ b/index.html
@@ -426,6 +426,7 @@
             <div><span class="label">Actividad:</span> ${row["Actividad"] || ""}</div>
             <div><span class="label">Riesgo:</span> ${row["Riesgo LAyFT"] || ""}</div>
             <div><span class="label">Nivel de aprobación:</span> ${row["Nivel de Aprobación"] || ""}</div>
+            <div><span class="label">ADD:</span> ${row["ADD"] || ""}</div>
             <div><span class="label">TPV USD$:</span> ${row["TPV USD$ (CELxDefault)"] || ""}</div>
             <div class="section-space"></div>
             <div class="table-responsive">
