--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 </head>
 <body>
   <div class="logo-top-right">
-    <img src="PayM.jpg" alt="Logo" />
+    <img src="PayM.png" alt="Logo" />
   </div>
   <h2>Buscador de MCC</h2>
   <input type="text" id="mccInput" placeholder="Busca por MCC, actividad, descripción..." oninput="debouncedFiltrarMCC()" disabled>
