--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
       z-index: 100;
     }
     .logo-top-right img {
-      height: 54px;
-      width: auto;
+      max-width: 100%;
+      height: auto;
       display: block;
+      max-height: 80px; /* <-- Así el logo nunca será más alto que 80px */
     }
     @media (max-width: 700px) {
       .logo-top-right {
@@ -243,7 +244,7 @@
 </head>
 <body>
   <div class="logo-top-right">
-    <img src="PayM3.png" alt="Logo" />
+    <img src="PayM2.png" alt="Logo" />
   </div>
   <h2>Buscador de MCC</h2>
   <input type="text" id="mccInput" placeholder="Busca por MCC, actividad, descripción..." oninput="debouncedFiltrarMCC()" disabled>
