--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
             <div class="mcc">MCC: ${row.MCC} &mdash; ${row["Categroria / Subcategoria"] || ""}</div>
             <div class="desc">${row["MCC CODE DESCRIPTION ES"] || ""}</div>
             <div><span class="label">Actividad:</span> ${row["Actividad"] || ""}</div>
-            <div><span class="label">Riesgo:</span> ${row["Riesgo LAyFT"] || ""}</div>
+            <div><span class="label">Riesgo AML:</span> ${row["Riesgo LAyFT"] || ""}</div>
             <div><span class="label">Nivel de aprobación:</span> ${row["Nivel de Aprobación"] || ""}</div>
             <div><span class="label">ADD:</span> ${row["ADD"] || ""}</div>
             <div><span class="label">TPV USD$:</span> ${row["TPV USD$ (CELxDefault)"] || ""}</div>
