--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       body { margin: 8px; }
     }
     h2 {
-      color: #5600EF;
+      color: #222;
       letter-spacing: 1px;
       font-weight: 800;
       margin-bottom: 28px;
