--- a/index.html
+++ b/index.html
@@ -35,9 +35,13 @@
       body { margin: 8px; }
     }
     h2 {
-      color: #222;
-      letter-spacing: 1px;
+      background: linear-gradient(90deg, #5600EF, #FF007A);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+      text-fill-color: transparent;
       font-weight: 800;
+      letter-spacing: 1px;
       margin-bottom: 28px;
     }
     input {
